--- a/Home.html
+++ b/Home.html
@@ -73,7 +73,7 @@
     <section class="u-align-center u-clearfix u-white u-section-1" id="carousel_f975">
       <div class="u-expanded-width u-video u-video-1">
         <div class="embed-responsive embed-responsive-1">
-          <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://youtu.be/ZdrQUBS966c" frameborder="0" allowfullscreen=""></iframe>
+		<iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" src="https://www.youtube.com/embed/e8MDtKITZIQ" title="YouTube video player" frameborder="0" allow="autoplay;gyroscope;" allowfullscreen></iframe>
         </div>
       </div>
       <h3 class="u-custom-font u-font-lobster u-text u-text-1"> The apps you&nbsp;love.<br>From a plac​e you&nbsp;can trust.
