--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-5863"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-5863"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
@@ -73,7 +73,7 @@
     <section class="u-align-center u-clearfix u-white u-section-1" id="carousel_f975">
       <div class="u-expanded-width u-video u-video-1">
         <div class="embed-responsive embed-responsive-1">
-          <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://youtu.be/ZdrQUBS966c" frameborder="0" allowfullscreen=""></iframe>
+		<iframe src="https://player.vimeo.com/video/710597685?h=002cee78fa&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Mac OS X Screensaver - BROOKLYN (4K) RELEASED 2019.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js">
         </div>
       </div>
       <h3 class="u-custom-font u-font-lobster u-text u-text-1"> The apps you&nbsp;love.<br>From a plac​e you&nbsp;can trust.
