--- a/Home.html
+++ b/Home.html
@@ -73,9 +73,8 @@
     <section class="u-align-center u-clearfix u-white u-section-1" id="carousel_f975">
       <div class="u-expanded-width u-video u-video-1">
         <div class="embed-responsive embed-responsive-1">
-		<iframe width=100% height=100% src="https://www.youtube.com/embed/ZdrQUBS966c?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		
-	</div>
+          <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/NK2mCgM_YB4??version=3&autoplay=1&mute=1&loop=1&playlist=NK2mCgM_YB4" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
       </div>
       <h3 class="u-custom-font u-font-lobster u-text u-text-1"> The apps you&nbsp;love.<br>From a plac​e you&nbsp;can trust.
       </h3>
