--- a/Home.html
+++ b/Home.html
@@ -94,7 +94,7 @@
     <section class="u-clearfix u-custom-color-2 u-section-3" id="sec-a57a">
       <div class="u-expanded-height u-video u-video-cover u-video-1">
         <div class="embed-responsive embed-responsive-1">
-          <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://my.spline.design/gameboycopy-056836d71281c3b8e512026b442d3664/" frameborder="0" allowfullscreen=""></iframe>
+          <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/RI0dWy1CVfw??version=3&autoplay=1&mute=1&loop=1&playlist=RI0dWy1CVfw" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
       <h3 class="u-align-center u-custom-font u-font-roboto-slab u-text u-text-1">
